fix align

--- a/src/scss/cdb-components/lists.scss
+++ b/src/scss/cdb-components/lists.scss
@@ -33,6 +33,6 @@
 .CDB-ListDecoration-itemLink {
   display: block;
   padding: 12px 16px;
-  text-align: center;
+  text-align: left;
 }
 
